Bug 1404385 - Don't copy if not needed for whitespace removal. r=smaug